Add global styles and init main section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
-  
+
   <title>Frontend Mentor | Clipboard landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -21,14 +21,21 @@
   </style>
 </head>
 <body>
-
-  A history of everything you copy
-
-  Clipboard allows you to track and organize everything you 
-  copy. Instantly access your clipboard on all your devices.
-
-  Download for iOS
-  Download for Mac
+  <main class="main">
+    <div class="container main__container">
+      <img class="main__logo" src="./images/logo.svg" alt="Clipboard">
+      <h1 class="title">
+        A history of everything you copy
+      </h1>
+      <p class="text">
+        Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.
+      </p>
+      <div class="button-wrapper">
+        <a class="button button--color--green" href="#">Download for iOS</a>
+        <a class="button button--color--blue" href="#">Download for Mac</a>
+      </div>
+    </div>
+  </main>
 
   Keep track of your snippets
 
