--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <body>
   <main class="main">
     <div class="container main__container">
-      <img class="main__logo" src="./images/logo.svg" alt="Clipboard">
-      <h1 class="title">
+        <img class="main__logo" src="./images/logo.svg" alt="Clipboard">
+      <h1 class="title title--type--main">
         A history of everything you copy
       </h1>
-      <p class="text">
+      <p class="text text--type--main">
         Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.
       </p>
       <div class="button-wrapper">
@@ -37,64 +37,139 @@
     </div>
   </main>
 
-  Keep track of your snippets
+  <section class="container about">
+    <h2 class="title title--type--sub">Keep track of your snippets</h2>
+    <p class="text text--type--main">
+      Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.
+    </p>
+    <div class="about__wrapper">
+      <div class="about__image">
+        <img src="images/image-computer.png" alt="Computer">
+      </div>
+      <div class="about__content">
+        <h3 class="title title--type--topic">Quick Search</h2>
+        <p class="text text--type--topic">
+          Easily search your snippets by content, category, web address, application, and more.
+        </p>
+        <h3 class="title title--type--topic">iCloud Sync</h2>
+        <p class="text text--type--topic">
+          Instantly saves and syncs snippets across all your devices.
+        </p>
+        <h3 class="title title--type--topic">Complete History</h2>
+        <p class="text text--type--topic">
+          Retrieve any snippets from the first moment you started using the app.
+        </p>
+      </div>
+    </div>
+  </section>
 
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
+  <section class="container devices">
+    <h2 class="title title--type--sub">Access Clipboard anywhere</h2>
+    <p class="text text--type--main">
+      Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.
+    </p>
+    <img class="devices__image" src="images/image-devices.png" alt="Devices">
+  </section>
 
-  Quick Search
+  <section class="container tools">
+    <h2 class="title title--type--sub">Supercharge your workflow</h2>
+    <p class="text text--type--main">
+      We’ve got the tools to boost your productivity.
+    </p>
 
-  Easily search your snippets by content, category, web address, application, and more.
+    <div class="tools__wrapper">
+      <div class="tools__item">
+        <h3 class="title title--type--topic black-list">Create blacklists</h3>
+        <p class="text text--type--topic">
+          Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+        </p>
+      </div>
+      <div class="tools__item">
+        <h3 class="title title--type--topic snippets">Plain text snippets</h3>
+        <p class="text text--type--topic">
+          Remove unwanted formatting from copied text for a consistent look.
+        </p>
+      </div>
+      <div class="tools__item">
+        <h3 class="title title--type--topic preview">Sneak preview</h3>
+        <p class="text text--type--topic">
+          Quick preview of all snippets on your Clipboard for easy access.
+        </p>
+      </div>
+    </div>
+  </section>
 
-  iCloud Sync
+  <section class="container partners">
+    <a class="partners__link" href="https://google.com" target="blank">
+      <img class="partners__image" src="images/logo-google.png" alt="Google">
+    </a>
+    <a class="partners__link" href="https://google.com" target="blank">
+      <img class="partners__image" src="images/logo-ibm.png" alt="Google">
+    </a>
+    <a class="partners__link" href="https://google.com" target="blank">
+      <img class="partners__image" src="images/logo-microsoft.png" alt="Google">
+    </a>
+    <a class="partners__link" href="https://google.com" target="blank">
+      <img class="partners__image" src="images/logo-hp.png" alt="Google">
+    </a>
+    <a class="partners__link" href="https://google.com" target="blank">
+      <img class="partners__image" src="images/logo-vector-graphics.png" alt="Google">
+    </a>
+  </section>
 
-  Instantly saves and syncs snippets across all your devices.
+  <section class="container download">
+    <h2 class="title title--type--sub">Clipboard for iOS and Mac OS</h2>
+    <p class="text text--type--main">
+      Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.
+    </p>
+    <div class="button-wrapper">
+      <a class="button button--color--green" href="#">Download for iOS</a>
+      <a class="button button--color--blue" href="#">Download for Mac</a>
+    </div>
+  </section>
 
-  Complete History
+  <footer class="footer">
+    <div class="container footer__container">
+      <div class="footer__logo">
+        <img src="./images/logo.svg" alt="Clipboard">
+      </div>
 
-  Retrieve any snippets from the first moment you started using the app.
-
-  Access Clipboard anywhere
-
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
-
-  Supercharge your workflow
-
-  We’ve got the tools to boost your productivity.
-
-  Create blacklists
-
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
-
-  Plain text snippets
-
-  Remove unwanted formatting from copied text for a consistent look.
-
-  Sneak preview
-
-  Quick preview of all snippets on your Clipboard for easy access.
-
-  Clipboard for iOS and Mac OS
-
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
-
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a href="#" class="footer__link">FAQs</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">Contact Us</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">Privacy Policy</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">Press Kit</a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">Install Guide</a>
+        </li>
+      </ul>
+      <div class="footer__social">
+        <a href="#" class="footer__icon">
+          <img src="images/icon-facebook.svg" alt="Facebook">
+        </a>
+        <a href="#" class="footer__icon">
+          <img src="images/icon-twitter.svg" alt="Twitter">
+        </a>
+        <a href="#" class="footer__icon">
+          <img src="images/icon-instagram.svg" alt="Instagram">
+        </a>
+      </div>
+    </div>
+  </footer>
   
-  <footer>
+  <div>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/jpdrsanchez" target="_blank">João Pedro Sanchez</a>.
     </p>
-  </footer>
+  </div>
 </body>
 </html>
